tests/baselines/reference/parserParameterList5.errors.txt
parserParameterList5.ts(1,15): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
parserParameterList5.ts(1,16): error TS2369: A parameter property is only allowed in a constructor implementation.
parserParameterList5.ts(1,29): error TS2304: Cannot find name 'C'.


==== parserParameterList5.ts (3 errors) ====
    function A(): (public B) => C {
                  ~~~~~~~~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
                   ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                                ~
!!! error TS2304: Cannot find name 'C'.
    }